# needle-pytorch-from-scratch

./: .gitignore  README.md  language_model.py  models.py  needle_architecture.drawio  pyproject.toml  simple_ml.py
apps/: mlp_resnet.py  models.py  simple_ml_ext.py
examples/: language_model.py  mnist_resnet.ipynb
needle/: autograd.py  backend_numpy.py  backend_selection.py  optim.py
needle/backend_ndarray/: ndarray.py
needle/data/: data_basic.py
needle/data/datasets/: cifar10_dataset.py  ptb_dataset.py
needle/init/: init_basic.py  init_initializers.py
needle/nn/: nn_basic.py  nn_conv.py  nn_sequence.py  nn_transformer.py
needle/ops/: ops_logarithmic.py  ops_mathematic.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
tests/: test_autograd_hw.py  test_cifar_ptb_data.py  test_nd_backend.py  test_sequence_models.py  test_simple_ml.py
tests/hw4_extra/: data
